macros/tests/proto/fail/invalid_guid.stderr
error: Invalid GUID: ParseUuidError
  --> tests/proto/fail/invalid_guid.rs:12:12
   |
12 | #[Protocol("c986ec27-69420-af54-4b55-80aa-91697fcdf8eb")]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
